Reverts the change

--- a/content/index.html
+++ b/content/index.html
@@ -42,5 +42,5 @@
     }
 </style>
 <article>
-    <h1>Something awesome is coming soon! - Test</h1>
+    <h1>Something awesome is coming soon!</h1>
 </article>
