--- a/content/index.html
+++ b/content/index.html
@@ -1,46 +1,102 @@
-<!doctype html>
-<title>Coming soon...</title>
-<style>
-    @import url('https://fonts.googleapis.com/css?family=Raleway|Roboto&display=swap');
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Eike Bergmann - Software Engineer</title>
+        <meta http-equiv="content-type" content="text/html; charset=UTF-8" />        
 
-    html {
-        width: 100%;
-        height: 100%;
-        background-image: url('background.jpg');
-        background-repeat: no-repeat;
-        background-position: center center;
-        background-size: cover;
-    }
+        <!-- SEO -->
+        <meta name="keywords" content="developer, software engineer, software architect, tech enthusiast, sap, web, tech, expert" />
+        <meta name="language" content="EN">
+        <meta name="robots" content="index,follow">     
 
-    body {
-        text-align: center;
-        padding: 150px;
-    }
+        <!-- Author -->
+        <meta name="author" content="Eike Bergmann, contact@ebergmann.me" />
+        <meta name="reply-to" content="contact@ebergmann.me">
 
-    h1 {
-        font-family: 'Raleway', Helvetica, sans-serif;
-        font-size: 45px;
-        font-weight: 400;
-        font-style: normal;
-        text-align: center;
-        color: #FFDC00;
-    }
+        <!-- Mobile friendly -->
+        <meta name="HandheldFriendly" content="True" />
+        <meta name="MobileOptimized" content="320" />
+        <meta name="viewport" content="width=device-width, minimum-scale=1" />
 
-    body {
-        font-family: 'Roboto', Helvetica, sans-serif;
-        font-size: 20px;
-        font-weight: 400;
-        font-style: normal;        
-        color: #333;
-    }
+        <link rel="stylesheet" href="resources/styles.css" />
+        <link rel="icon" href="resources/favicon.ico">
 
-    article {
-        display: block;
-        text-align: left;
-        width: 100%;
-        margin: 0 auto;
-    }
-</style>
-<article>
-    <h1>Something awesome is coming soon!</h1>
-</article>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y6K93BV7E9"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'G-Y6K93BV7E9');
+        </script>
+    </head>
+
+    <body>
+        <div class="profile-container">
+            <div class="head">
+                <div class="profile-image"></div>
+                <div class="profile-short">
+                    <h1 class="name">Eike Bergmann</h1>
+                    <h2 class="title">Software Engineer in <span class="city">Munich, Germany</span></h2>
+                </div>
+            </div>
+
+            <div class="body">
+                <button onclick="location.href='mailto:contact@ebergmann.me';">✉️ Contact Me</button>
+                <div class="bio">
+                    <p>
+                        I studied Computer Science in Munich (Germany) and started my software development career as a web
+                        developer in Munich at ososoft. During this time, I learned to love web technologies like
+                        JavaScript/TypeScript in general, and the entire Node.js ecosystem.
+                    </p>
+                    <p>
+                        After many ugly fights against CSS, I started my exciting journey into the SAP world and became CTO 
+                        at ososoft. In this new role, I try to inspire my like-minded developer colleagues to improve 
+                        continuously and keep up with the ever-evolving technology landscape.
+                    </p>
+                    <p>
+                        Besides my day job at ososoft, I try to keep current with cryptocurrencies and distributed ledger technologies
+                        in general.
+                    </p>
+                </div>
+                <div class="social-links">
+                    <a class="link" title="Visit me on GitHub" href="https://github.com/eikeb" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
+                            <defs xmlns="http://www.w3.org/2000/svg">
+                            <style>
+                                * {
+                                fill: #AAA;
+                                }
+
+                                :hover {
+                                fill: #555;
+                                }
+                            </style>
+                            </defs>
+                            <path fill="#AAA"
+                            d="M1000 508c0 232-160 429-375 485V862c0-41-10-98-52-131 134-20 239-99 239-223 0-51-21-102-58-144 11-47 17-105-4-148-53 5-106 32-145 56-33-8-67-14-105-14s-73 6-106 14c-39-24-91-51-144-56-21 43-16 101-5 148-37 42-57 93-57 144 0 124 105 203 239 223-20 15-32 36-40 57-105 2-189-81-190-81-5-4-12-5-16-2-6 3-9 10-7 16 2 5 44 124 201 172v100C160 937 0 740 0 508 0 233 223 8 500 8c275 0 500 225 500 500z" />
+                        </svg>
+                    </a>
+                    <a class="link" title="Visit me on LinkedIn" href="https://www.linkedin.com/in/eike-bergmann-93b0891a3/" target="_blank">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 1000">
+                            <defs xmlns="http://www.w3.org/2000/svg">
+                            <style>
+                                * {
+                                fill: #AAA;
+                                }
+
+                                :hover {
+                                fill: #555;
+                                }
+                            </style>
+                            </defs>
+                            <path fill="#AAA"
+                            d="M1000 500c0 277-223 500-500 500S0 777 0 500 223 0 500 0s500 223 500 500zM375 260c-1-41-32-73-83-73-50 0-83 32-83 73s32 73 82 73h1c51 0 83-32 83-73zm-21 136H229v354h125V396zm458 166c0-114-56-187-146-187-50 0-87 30-104 75l-4-54H434c1 13 3 83 3 83v271h125V562c0-50 23-83 62-83 38 0 63 20 63 83v188h125V562z" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
