--- a/content/index.html
+++ b/content/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="content-type" content="text/html; charset=UTF-8" />        
 
         <!-- SEO -->
-        <meta name="keywords" content="developer, software engineer, software architect, tech enthusiast, sap, web, tech, expert" />
+        <meta name="keywords" content="developer, software engineer, software architect, solution architect, tech enthusiast, sap, web, tech, expert" />
         <meta name="language" content="EN">
         <meta name="robots" content="index,follow">     
 
@@ -38,7 +38,7 @@
                 <div class="profile-image"></div>
                 <div class="profile-short">
                     <h1 class="name">Eike Bergmann</h1>
-                    <h2 class="title">Software Engineer in <span class="city">Munich, Germany</span></h2>
+                    <h2 class="title">Solution Architect in <span class="city">Munich, Germany</span></h2>
                 </div>
             </div>
 
@@ -53,11 +53,7 @@
                     <p>
                         After many ugly fights against CSS, I started my exciting journey into the SAP world and became CTO 
                         at ososoft. In this new role, I try to inspire my like-minded developer colleagues to improve 
-                        continuously and keep up with the ever-evolving technology landscape.
-                    </p>
-                    <p>
-                        Besides my day job at ososoft, I try to keep current with cryptocurrencies and distributed ledger technologies
-                        in general.
+                        continuously and keep up with the ever-evolving technology landscape around SAP BTP.
                     </p>
                 </div>
                 <div class="social-links">
@@ -95,6 +91,26 @@
                             d="M1000 500c0 277-223 500-500 500S0 777 0 500 223 0 500 0s500 223 500 500zM375 260c-1-41-32-73-83-73-50 0-83 32-83 73s32 73 82 73h1c51 0 83-32 83-73zm-21 136H229v354h125V396zm458 166c0-114-56-187-146-187-50 0-87 30-104 75l-4-54H434c1 13 3 83 3 83v271h125V562c0-50 23-83 62-83 38 0 63 20 63 83v188h125V562z" />
                         </svg>
                     </a>
+                    <a class="link" title="View my GitHub Pages" href="https://eikeb.github.io" target="_blank">
+                        <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                            <defs xmlns="http://www.w3.org/2000/svg">
+                            <style>
+                                * {
+                                fill: #AAA;
+                                }
+
+                                :hover {
+                                fill: #555;
+                                }
+                            </style>
+                            </defs>
+                            <g data-name="Google Slides" id="Google_Slides">
+                                <path d="M9.5,12H14V10H8v5H9V12.5A.5.5,0,0,1,9.5,12Z" />
+                                <rect height="5" width="6" x="10" y="13"/>
+                                <path d="M20.85,5.15l-5-5A.5.5,0,0,0,15.5,0H5A2,2,0,0,0,3,2V22a2,2,0,0,0,2,2H19a2,2,0,0,0,2-2V5.5A.5.5,0,0,0,20.85,5.15ZM17,18.5a.5.5,0,0,1-.5.5h-7a.5.5,0,0,1-.5-.5V16H7.5a.5.5,0,0,1-.5-.5v-6A.5.5,0,0,1,7.5,9h7a.5.5,0,0,1,.5.5V12h1.5a.5.5,0,0,1,.5.5ZM17,5a1,1,0,0,1-1-1V1.71L19.29,5Z" />
+                            </g>
+                        </svg>
+                    </a>                    
                 </div>
             </div>
         </div>
